game/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
  namespace: testing
  labels:
    app: game
spec:
  selector:
    matchLabels:
      app: game
  replicas: 2
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
        - name: game
          image: bhargavshah86/kube-test:v0.1
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: 256Mi
              cpu: "250m"
            requests:
              memory: 128Mi
              cpu: "80m"
      #     volumeMounts:
      #     - name: storage
      #       mountPath: /data/
      # volumes:
      # - name: storage
      #   hostPath:
      #     path: /data
