game/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game
  namespace: testing
spec:
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
